alignment and free sort fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,7 @@
   text-align: center;
   margin-right: auto;
   margin-left: auto;
+  width: 850px;
 }
 
 .stim {
